@@ -35,7 +35,7 @@
  --list-hover-color:rgba(0, 0, 0, 0.04)!important;
  --list-active-color:rgba(0, 0, 0, 0.08)!important;
  --menu-dlg-shadow:0 1px 6px 1px rgba(0,0,0,.12);
- --image-background-color:#ddd;
+ --image-background-color:rgba(0, 0, 0, 0.075);
 }
 
 .theme--dark {
@@ -44,7 +44,8 @@
  --border-color:rgba(237, 236, 231, 0.25);
  --tab-border-color:rgba(237, 236, 231, 0.1);
  --menu-dlg-shadow:0 1px 6px 1px rgba(0,0,0,.4)!important;
- --image-background-color:#444;
+ --image-background-color:rgba(0, 0, 0, 0.15);
+
 }
 
 .note {
